# tauri-surrealdb-starter

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  vite.config.js  vite.config.ts
apps/desktop-mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-mobile/src/: main.ts  style.css  surreal-sdk.features.test.ts
apps/desktop-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-mobile/src-tauri/capabilities/: default.json
apps/desktop-mobile/src-tauri/src/: lib.rs  surreal_bridge.rs
apps/tauri-todo/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri-todo/src/: main.ts  style.css
apps/tauri-todo/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-todo/src-tauri/capabilities/: default.json
apps/tauri-todo/src-tauri/icons/: icon.icns
apps/tauri-todo/src-tauri/src/: lib.rs  main.rs
docs/: architecture-and-contract.md  troubleshooting.md  upstream-overlay.md  validation-and-handoff.md
patches/: surrealdb+2.0.3.patch
src/: app.html  main.ts  surreal-sdk.features.test.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/crates/surreal_tauri_bridge/: Cargo.toml
src-tauri/crates/surreal_tauri_bridge/src/: commands.rs  lib.rs
src-tauri/crates/surrealdb-bridge/: Cargo.toml
src-tauri/crates/surrealdb-bridge/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  surreal_bridge.rs
src/lib/components/test-console/: LiveFeedContent.svelte  PayloadSnapshotsContent.svelte  TestResultsContent.svelte
src/routes/: +page.svelte
