[package]
name = "starter-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "starter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
surrealdb = { version = "3.0.5", default-features = false, features = [
    "protocol-http",
    "kv-surrealkv",
] }
tokio = { version = "1", features = ["sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
