[package]
name = "surreal_tauri_bridge"
version = "0.1.0"
edition = "2021"

[features]
default = []
file-buckets = []

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
surrealdb = { version = "3.0.5", default-features = false, features = [
    "kv-surrealkv",
] }
