[package]
name = "surrealdb_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3.0.5", default-features = false, features = [
    "kv-surrealkv",
] }
tokio = { version = "1", features = ["sync"] }

[features]
default = []
file-buckets = []
